--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,10 @@
 # History files
 .Rhistory
 .Rapp.history
-
 # Example code in package build process
 *-Ex.R
-
 # RStudio files
 .Rproj.user/
-
 # produced vignettes
 vignettes/*.html
 vignettes/*.pdf
@@ -16,3 +13,4 @@ vignettes/*.pdf
 .DS_Store
 plantListAcceptedNames/
 source_data/Spermatophyta_Genera.csv
+/Users/habacuc/Library/Application Support/datastorr/httr-oath
